--- a/package.json
+++ b/package.json
@@ -1,13 +1,23 @@
 {
-    "name": "scrypta-blockchain-versioning-cli",
-    "version": "1.0.2",
+    "name": "@scrypta/bvc",
+    "version": "1.0.3",
     "description": "Publish and verify code with Scrypta Blockchain",
     "main": "./lib/index.js",
+    "private": false,
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "pub": "npm publish --access public"
     },
     "bin": {
         "scrypta-bvc": "./bin/global.js"
+    },
+    "keywords": [
+        "blockchain",
+        "scrypta",
+        "scryptachain"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/scryptachain/scrypta-blockchain-versioning-cli"
     },
     "preferGlobal": true,
     "author": "Scrypta Foundation",
